# PYMC-Bayesian-Modelling

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: Numpy.ipynb  Practice PYMC.ipynb  exp_baseline.yaml  model.yml  sampler.yml
data/: README.md
notebooks/: 01-data-generation.ipynb  02-data-exploration.ipynb  03-data-transformations & FE.ipynb  04-model outputs & visualisations-Copy1.ipynb  04-modelling.ipynb  05-model evaluation.ipynb  Centered Version Hierarchy.py  Untitled1.ipynb  experimentation.ipynb
scripts/: check_idata_groups.py  main.py  tester_evaluate_ppc.py  tester_forest_plot.py  tester_model_fit.py  tester_pair_plot.py  tester_sampling_diagnostics.py  train_model.py
src/mmm/: make_synthetic_panel.py  model.py  modelling_transformations.py  seasonality_features.py
src/mmm/data/: load_data_azure.py  make_synthetic_panel.py  transformations_datagen.py
src/mmm/evaluation/: forest_plot.py  model_fit.py  oos_prediction.py  pair_plot.py  sampling_diagnostics.py
src/mmm/model/: Untitled.ipynb  model.py  (+4 more)
tests/: conftest.py  test_dgp.py  test_model.py  test_seasonality.py  test_transformations.py  test_transformations_modelling.py
tests/data_tests/: test_datagen_transformations.py  test_datageneration.py
tests/evaluation/: test_model_fit.py  test_oos_prediction.py  test_sampling_diagnostics.py
tests/feature_engineering_tests/: test_seasonality.py
tests/modelling/: test_build_mmm.py  test_sampler.py
tests/transformations/: test_transformations_modelling.py
tests/version/: test_runtime_versions.py
(+7 files in other folders)
